# EstateWorth-AI

./: .dockerignore  Dockerfile  Dockerfile.streamlit  ML ENG PIPELINE.txt  README.md  TECHNOLOGYstack.txt  app.py  pyproject.toml
.github/workflows/: ci.yml
models/: target_encoder.pkl  xgb_best_model.pkl  xgb_model.pkl
notebooks/: LR_regularization.ipynb  S3_push_datasets_AWS.ipynb  XGBoost.ipynb  baseline.ipynb  data_split.ipynb  feature_eng_encoding.ipynb  hyperparameter_tuning_MLFlow.ipynb
src/api/: main.py
src/feature_pipeline/: feature_eng.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py  tune.py
tests/: smoke_test_.ipynb  test_features.py  test_inference.py  test_training.py
