[project]
name = "housing-regression-mle"
version = "0.1.0"
description = "Housing price time-series regression and ML pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "boto3>=1.40.33",
    "category-encoders>=2.8.1",
    "evidently>=0.7.12",
    "fastapi>=0.116.1",
    "great-expectations==1.5.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "optuna>=4.5.0",
    "pandas==2.1.1",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "xgboost==3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true